css/main.css
:root {
    --twitter-blue-link: rgb(27, 149, 224);
    --twitter-black-text: rgb(15, 20, 25);
    --twitter-bar-color: rgb(196, 207, 214);
    --font-size: 18px;
    --line-height: 24px;
    --profile-photo-size: 58px;
}


/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */


/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */


/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */


/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}


/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}


/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}


/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}


/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}


/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */


/* ==========================================================================
   Helper classes
   ========================================================================== */


/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
    display: none !important;
}


/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
    border: 0;
    clip: rect(0, 0, 0, 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    white-space: nowrap;
    width: 1px;
    /* 1 */
}


/*
 * Extends the .sr-only class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.sr-only.focusable:active,
.sr-only.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    white-space: inherit;
    width: auto;
}


/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}


/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix::before,
.clearfix::after {
    content: " ";
    display: table;
}

.clearfix::after {
    clear: both;
}


/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
(-webkit-min-device-pixel-ratio: 1.25),
(min-resolution: 1.25dppx),
(min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}


/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *::before,
    *::after {
        background: #fff !important;
        color: #000 !important;
        /* Black prints faster */
        box-shadow: none !important;
        text-shadow: none !important;
    }
    a,
    a:visited {
        text-decoration: underline;
    }
    a[href]::after {
        content: " (" attr(href) ")";
    }
    abbr[title]::after {
        content: " (" attr(title) ")";
    }
    /*
   * Don't show links that are fragment identifiers,
   * or use the `javascript:` pseudo protocol
   */
    a[href^="#"]::after,
    a[href^="javascript:"]::after {
        content: "";
    }
    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }
    /*
   * Printing Tables:
   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
   */
    thead {
        display: table-header-group;
    }
    tr,
    img {
        page-break-inside: avoid;
    }
    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }
    h2,
    h3 {
        page-break-after: avoid;
    }
}

* {
    box-sizing: border-box;
}

#viewport {
    max-height: var(--100vh, 100vh);
}

#area {
    padding: 15px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    display: flex;
    flex-direction: column;
    height: var(--100vh, 100vh);
}

[data-component~="card"] {
    font-size: 20px;
    height: 100%;
    max-width: 600px;
    margin: 0px auto;
    color: var(--twitter-black-text);
}

[data-component~="card"] a {
    color: var(--twitter-blue-link);
}

[data-component~="card"] .curtain {
    background: white;
    transition: opacity 0.5s;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    text-align: center;
    opacity: 1
}

[data-component~="card"] .curtain.hide {
    pointer-events: none;
    opacity: 0;
}

[data-component~="card"] .twitter-box {
    display: flex;
    width: 100%;
}

[data-component~="card"] .twitter-box p {
    margin-top: 0;
    margin-block-start: 0;
    font-size: var(--font-size);
}

[data-component~="card"] .twitter-box.tweet-minus-1,
[data-component~="card"] .twitter-box.tweet-minus-2 {
    display: none;
}

[data-component~="card"] .twitter-box.tweet-minus-1.show,
[data-component~="card"] .twitter-box.tweet-minus-2.show {
    display: flex;
}

[data-component~="card"] .twitter-box:before {
    content: "";
    border-left: 2px solid var(--twitter-bar-color);
    margin-right: calc(-0.5208 * var(--profile-photo-size));
    margin-left: calc(0.5208 * var(--profile-photo-size));
    margin-top: calc(1.0833 * var(--profile-photo-size));
    margin-bottom: 3px;
}

[data-component~="card"] .twitter-box:last-child:before {
    display: none;
}

[data-component~="card"] img.profile {
    width: var(--profile-photo-size);
    height: var(--profile-photo-size);
    border-radius: 50%;
    border: 1px solid #eee;
    background: white;
}

[data-component~="card"] article {
    flex: 1;
    margin-left: 12px;
}

[data-component~="card"] article h1 {
    font-size: var(--font-size);
    line-height: var(--line-height);
    margin: 0;
    margin-bottom: 4px;
}

[data-component~="card"] #tweet,
[data-component~="card"] #response {
    margin-top: 0;
    margin-bottom: 60px;
    font-size: var(--font-size);
    line-height: var(--line-height);
}

[data-component~="toolbar"] {
    height: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    left: 0;
    bottom: 0;
    right: 0;
    transition: opacity 1s;
}

[data-component~="toolbar"].hide {
    pointer-events: none;
    opacity: 0;
}

[data-component~="toolbar"] button {
    padding: 10px 15px;
    background: white;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    margin: 0 3px;
}

[data-component~="toolbar"] .status-indicator {
    border-radius: 50%;
    width: 12px;
    height: 12px;
    background: grey;
    margin-left: 10px;
    transition: background-color 1s;
}

@keyframes bouncing {
    0% {
        width: 4px;
        height: 4px;
    }
    50% {
        width: 16px;
        height: 16px;
    }
    75% {
        width: 14px;
        height: 14px;
    }
    99% {
        width: 12px;
        height: 12px;
    }
}

[data-component~="toolbar"] .status-indicator.yellow {
    background: gold;
}

[data-component~="toolbar"] .status-indicator.green {
    background: chartreuse;
}

[data-component~="toolbar"] .status-indicator.red {
    background: red;
}

[data-component~="toolbar"] .status-indicator.yellow,
[data-component~="toolbar"] .status-indicator.green,
[data-component~="toolbar"] .status-indicator.red {
    animation-iteration-count: 2;
    animation: 1s bouncing;
}

[data-component~="toolbar"] button#approve {
    background: green;
    color: white;
}

[data-component~="toolbar"] button#reject {
    background: red;
    color: white;
}

@media (prefers-color-scheme: dark) {
    body {
        background: black;
        color: white;
    }
    [data-component~="card"] img.profile {
        border-color: var(--twitter-bar-color);
    }

     :root {
        --twitter-black-text: white;
        --twitter-bar-color: rgb(84, 89, 92);
    }

    [data-component~="card"] .curtain {
        background: black;
    }
}

